@@ -1,5 +1,5 @@
 /* low-crypto.h --- Crypto initialization prototypes.
- * Copyright (C) 2002, 2003, 2004, 2007, 2008  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2007, 2008, 2010  Simon Josefsson
  *
  * This file is part of Shishi.
  *
@@ -24,5 +24,6 @@
 #define LOW_CRYPTO_H
 
 int _shishi_crypto_init (Shishi * handle);
+void _shishi_quick_random (void);
 
 #endif
