@@ -1,8 +1,10 @@
 Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
 * Version 0.0.41 (unreleased)
+
+** Add configuration keyword 'quick-random' to speed up libgcrypt.
 
 ** API and ABI modifications:
 No changes since last version.
